mlir/test/Dialect/Lattice/invalid/unsupported_ir_version.mlir
// Invalid: only lattice.ir_version = 0 is currently accepted.
module attributes {
  lattice.ir_version = 1,
  lattice.schema_digest = "545fd43029e2fbebc18404babc0ec463730a13056a18f51280d8f1a272a3369c",
  lattice.input_names = [],
  lattice.input_roles = [],
  lattice.output_names = [],
  lattice.output_roles = [],
  lattice.weight_file = "weights.safetensors"
} {
  func.func @forward() {
    return
  }
}
